--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,43 @@
-.App {
-  text-align: center;
+*{
+    box-sizing: border-box;
+    margin: 0;
+}
+.App{ 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.input__box{
+    width: 90%;
+    height: 100px;
+    margin: 2em 0;
+}   
+
+.display__box{
+    min-height: 100px;
+    width: 90%;
+    overflow: hidden;
+    line-height: 22px;
+    margin-bottom: 2em;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.display__box,
+.input__box{
+    border:none;
+    border-radius: 7px;
+    box-shadow: 0px 2px 10px 1px rgba(0, 0, 0, 0.2);
+    padding: 0.5em;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.show__btn{
+    padding: 0.5em 1em;
+    border-radius: 5px;
+    border:none;
+    background-color:rgb(27, 117, 234);
+    color: white;
+    cursor: pointer;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.show__btn:active{
+    transform: translateY(5px);
+    box-shadow: 0 5px #666;
 }
