--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,7 @@
     overflow: hidden;
     line-height: 22px;
     margin-bottom: 2em;
+    position: relative;
 }
 
 .display__box,
@@ -33,9 +34,13 @@
     padding: 0.5em 1em;
     border-radius: 5px;
     border:none;
-    background-color:rgb(27, 117, 234);
+    background-color:rgba(27, 117, 234,0.5);
     color: white;
     cursor: pointer;
+    position: absolute;
+    bottom: 5px;
+    right: 5px;
+    
 }
 .show__btn:active{
     transform: translateY(5px);
